--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
+fastapi==0.109.2
+uvicorn==0.27.1
+python-dotenv==1.0.1
 requests==2.31.0
 pydantic==2.4.2
 pydantic-settings==2.1.0
-python-multipart==0.0.6
-sqlalchemy==2.0.23
+python-multipart==0.0.9
+sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 openai==1.3.0
 google-cloud-vision==3.4.4
 pytest==7.4.3
-httpx==0.25.1 
+httpx==0.25.1
+cryptography==42.0.2
+PyJWT==2.8.0 
