--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -6,4 +6,11 @@ services:
     staticPublishPath: ./dist
     envVars:
       - key: VITE_API_URL
-        value: https://dext-xero-backend.onrender.com 
+        value: https://dext-xero-backend.onrender.com
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: no-cache
+      - path: /assets/*
+        name: Cache-Control
+        value: public, max-age=31536000, immutable 
